UN-5219 Fixed replys from grouping together. Fixed wor wrapping with name and post text. Changed text box to text area
git-svn-id: https://svn.otpartners.com/svn/Poses/trunk@2647 7f4e098a-8ec1-c442-913e-02cc3c41ae5c

--- a/UnderstoodDotOrg.Web/Presentation/Includes/css.source/modules/community/_groups.scss
+++ b/UnderstoodDotOrg.Web/Presentation/Includes/css.source/modules/community/_groups.scss
@@ -1970,6 +1970,8 @@ div.selector.fixedWidth {
         }
         .name {
           margin-bottom: 0px;
+          word-wrap: break-word;
+          -ms-word-wrap: break-word;
           @include rem(font-size, 22px);
           @include bp($bp-small) {
             margin-bottom: 3px;
@@ -2015,6 +2017,8 @@ div.selector.fixedWidth {
         @include rem(line-height, 29px);
         p {
           margin-bottom: 20px;
+          word-wrap: break-word;
+          -ms-word-wrap: break-word;
           @include bp(($bp-small-plus) (max-width 768px)) {
             margin-bottom: 30px;
           }
